# crypto-api-client

./: .gitignore  .ruff.toml  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
docs/: Makefile
docs/source/: api_references.rst  conf.py  glossary.rst  index.rst
examples/: __init__.py  arbitrage.py  multi_exchange_orderbook.py  rate_limit_inspector.py  session_config_demo.py  tickers.py
examples/binance/: default_response_validator.py  depth.py  exchange_info.py  ticker.py
examples/bitbank/: assets.py  create_order.py  default_response_validator.py  depth.py  spot_status.py  ticker.py
examples/bitflyer/: balances.py  board.py  board_state.py  callbacks.py  cancelchildorder.py  custom_response_validator.py  default_response_validator.py  exchange_health.py  getchildorders.py  markets.py  private_executions.py  public_executions.py  redis_shared_url_pattern_rate_limiter.py  sendchildorder.py  ticker.py  trading_commission.py
examples/coincheck/: balances.py  default_response_validator.py  order_book.py  ticker.py  unsettled_orders.py
examples/common/: __init__.py  display.py  helpers.py  order_book_display.py  redis_client_factory.py  ticker_fetcher.py  typer_custom_types.py
examples/database/: __init__.py
examples/gmocoin/: orderbook.py  ticker.py
examples/performance/: connection_pooling_test.py  session_pooling_comparison.py
examples/proxy/: authenticated_proxy.py  basic_proxy.py  env_proxy.py  proxy_with_cert.py
examples/security/: headers_protection.py
examples/upbit/: ticker.py
src/crypto_api_client/: __init__.py  session_factory.py  types.py
tests/: conftest.py  redis_test_factory.py
tests/_base/: __init__.py  test_payload.py
tests/binance/: __init__.py  test_binance_response_validator.py  test_signature_builder.py
tests/bitbank/: __init__.py  conftest.py  test_exchange_api_client_auth.py  test_refactoring_integration.py  test_signature_builder.py
tests/bitflyer/: __init__.py  conftest.py  test_exchange_api_client_auth.py  test_factory.py  test_public_executions_integration.py  test_signature_builder.py
tests/callbacks/: __init__.py  test_callbacks.py  test_rate_limit_key_builder.py  test_redis_connection_failure_integration.py  test_redis_shared_url_pattern_rate_limiter.py  test_redis_shared_url_pattern_rate_limiter_integration.py
tests/coincheck/: __init__.py  test_signature_builder.py  (+1 more)
(+387 files in other folders)
